Update SwitchHandleNullExample.java